# input-filter

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-single-platform.yml
Include/: Graph.h  GraphComparator.h  Node.h
Source/: CMakeLists.txt  Graph.cpp  GraphComparator.cpp  Node.cpp
Test/: CMakeLists.txt  FilterTest.cpp  GraphTest.cpp  test.cpp
